admin UI fixes
